--- a/tables/ee18btech11006.tex
+++ b/tables/ee18btech11006.tex
@@ -184,7 +184,7 @@
 
 \hhline{|-|-}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\centering}\gnumbox{\textbf{Freq(Hz)}}}
+	{\gnumericPB{\centering}\gnumbox{\textbf{Freq(rad/sec)}}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
 	{\gnumericPB{\centering}\gnumbox{\textbf{Mag(dB)}}}
 \\
