--- a/gvv_ketan_manual.tex
+++ b/gvv_ketan_manual.tex
@@ -1,8 +1,9 @@
 \documentclass[journal,12pt,twocolumn]{IEEEtran}
-%\usepackage{setspace}
+%
+\usepackage{setspace}
 \usepackage{gensymb}
 %\doublespacing
-%\singlespacing
+\singlespacing
 
 %\usepackage{graphicx}
 %\usepackage{amssymb}
@@ -30,15 +31,19 @@
 %\usepackage{algpseudocode}
 \usepackage{enumitem}
 \usepackage{mathtools}
+\usepackage{steinmetz}
 \usepackage{tikz}
 \usepackage{circuitikz}
 \usepackage{verbatim}
-%\usepackage{tfrupee}
-%\usepackage[breaklinks=true]{hyperref}
+\usepackage{tfrupee}
+\usepackage[breaklinks=true]{hyperref}
 %\usepackage{stmaryrd}
-%\usepackage{tkz-euclide} % loads  TikZ and tkz-base
-%\usetkzobj{all}
-%\usepackage{listings}
+\usepackage{tkz-euclide} % loads  TikZ and tkz-base
+\usetkzobj{all}
+\usetikzlibrary{decorations.markings}
+\usetikzlibrary{shapes.geometric}
+\newif\iflabrev
+\usepackage{listings}
     \usepackage{color}                                            %%
     \usepackage{array}                                            %%
     \usepackage{longtable}                                        %%
@@ -68,12 +73,12 @@
 \hyphenation{op-tical net-works semi-conduc-tor}
 \def\inputGnumericTable{}                                 %%
 
-%\lstset{
+\lstset{
 %language=C,
-%frame=single, 
-%breaklines=true,
-%columns=fullflexible
-%}
+frame=single, 
+breaklines=true,
+columns=fullflexible
+}
 %\lstset{
 %language=tex,
 %frame=single, 
@@ -151,9 +156,9 @@
      \def\midbox#1{\raisebox{-0.5\baselineskip}[0in][0in]{#1}}
 \vspace{3cm}
 \title{
-	\logo{
+%	\logo{
 Control Systems
-	}
+%	}
 }
 \author{ G V V Sharma$^{*}$% <-this % stops a space
 	\thanks{*The author is with the Department
@@ -213,7 +218,7 @@ Control Systems
 % Remember, if you use this you must call \IEEEpubidadjcol in the second
 % column for its text to clear the IEEEpubid mark.
 % make the title area
-%\maketitle
+\maketitle
 \newpage
 \tableofcontents
 \bigskip
@@ -245,49 +250,14 @@ Control Systems
 % creates the second title. It will be ignored for other modes.
 %\IEEEpeerreviewmaketitle
 \begin{abstract}
-This manual is an introduction to control systems based on GATE problems.Links to sample Python codes are available in the text.  
+The objective of this manual is to introduce control system design at an elementary level.
 \end{abstract}
 Download python codes using 
-%\begin{lstlisting}
-%svn co https://github.com/gadepall/school/trunk/control/codes
-%\end{lstlisting}
-%\section{Bode Plot}
-%\begin{enumerate}[label=\thesection.\arabic*.,ref=\thesection.\theenumi]
-%\numberwithin{equation}{enumi}
-%\input{./chapters/ee18btech11001.tex}
-%\end{enumerate}
-\section{Stability}
-\subsection{Second order System}
-\section{Routh Hurwitz Criterion}
-\section{Compensators}
-\section{Nyquist Plot}
-%\section{Triangle}
-%\subsection{Triangle Examples}
-%\input{./triangle/tri_exam.tex} 
-%\subsection{Triangle Exercises}
-%\input{./triangle/tri_geo.tex} 
-%%
-%\section{Quadrilateral}
-%\subsection{Quadrilateral Examples}
-%\input{./quad/quad_geo_exam.tex} 
-%\subsection{Quadrilateral Geometry}
-%\input{./quad/quad_geo.tex} 
-%
-%\section{Constrained Optimization}
-%%\subsection{Equality Constraint}
-%\input{./chapters/line_exam.tex}
-%\section{Convex Function}
-%\input{./chapters/conv.tex}
-%\section{Gradient Descent}
-%\input{./chapters/grad_des.tex}
-%\section{Lagrange Multipliers}
-%\input{./chapters/lagrange.tex}
-%\section{Quadratic Programming}
-%\input{./chapters/qp.tex}
-%\section{Semi Definite Programming}
-%\input{./chapters/sdp.tex}
-%\section{Linear Programming}
-%\input{./chapters/lp_exam.tex}
-%\section{Exercises}
-%\input{./chapters/lp_exer.tex}
+\begin{lstlisting}
+svn co https://github.com/gadepall/school/trunk/control/ketan/codes
+\end{lstlisting}
+\section{Transfer function}
+\subsection{Bode Plot}
+\input{./chapters/ee18btech11006.tex}
 \end{document}
+
